--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CashControl</string>
+    <string name="select_category">Sélectionner une catégorie</string>
+
 </resources>
